# pydvdcss

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  README.md  THIRD-PARTY-NOTICES.md  banner.xcf  hatch_build.py  package-and-deploy.sh  package-and-install.sh  pyproject.toml  setup.py
.github/workflows/: build.yml  cd.yml  ci.yml  pypi-ci.yml  python-package.yml  release.yml  version-tests.yml
docs/: api.rst  conf.py  history.md  index.rst  todo.rst
docs/_templates/sidebar/: brand.html  github-buttons.html
docs/usage/: installation.rst
pydvdcss/: __init__.py  _types.py  constants.py  dvdcss.py  exceptions.py  structs.py  types.py  utilities.py
scripts/: download_libdvdcss.py
