[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pydvdcss"
version = "1.4.0"
description = "Python wrapper for VideoLAN's libdvdcss."
license = "GPLv3"
authors = ["rlaphoenix <rlaphoenix@pm.me>"]
readme = "README.md"
repository = "https://github.com/rlaphoenix/pydvdcss"
documentation = "https://pydvdcss.readthedocs.io"
keywords = ["python", "library", "dvd", "videolan", "libdvdcss"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Video :: Conversion",
  "Topic :: Security :: Cryptography",
]
include = [
  { path = "CHANGELOG.md", format = "sdist" },
  { path = "README.md", format = "sdist" },
  { path = "LICENSE", format = "sdist" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rlaphoenix/pydvdcss/issues"
"Forums" = "https://github.com/rlaphoenix/pydvdcss/discussions"
"Changelog" = "https://github.com/rlaphoenix/pydvdcss/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = {version = "^7.4.6", optional = true}
dunamai = {version = "^1.21.2", optional = true}
furo = {version = "^2024.7.18", optional = true}
myst-parser = {version = "^3.0.1", optional = true}

[tool.poetry.dev-dependencies]
ruff = "~0.5.3"
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.poetry.extras]
docs = ["Sphinx", "dunamai", "furo", "myst-parser"]

[tool.ruff.lint]
extend-select = ["B", "C4", "E", "FA", "FURB", "I", "ICN", "ISC", "N", "PERF", "PGH", "PIE", "RUF", "SIM", "UP", "W"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
