[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydvdcss"
version = "1.4.0"
description = "Python wrapper for VideoLAN's libdvdcss."
authors = [{ name = "rlaphoenix", email = "rlaphoenix@pm.me" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["python", "library", "dvd", "videolan", "libdvdcss"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.urls]
Repository = "https://github.com/rlaphoenix/pydvdcss"
Issues = "https://github.com/rlaphoenix/pydvdcss/issues"
Forums = "https://github.com/rlaphoenix/pydvdcss/discussions"
Changelog = "https://github.com/rlaphoenix/pydvdcss/blob/master/CHANGELOG.md"

[dependency-groups]
lint = ["ruff~=0.15.18", "pre-commit~=4.6.0"]
form = ["ruff~=0.15.18"]
type = ["mypy~=2.1.0"]

[tool.hatch.build.targets.sdist]
include = ["pydvdcss", "CHANGELOG.md", "README.md", "LICENSE"]

[tool.ruff.lint]
extend-select = ["B", "C4", "E", "FA", "FURB", "I", "ICN", "ISC", "N", "PERF", "PGH", "PIE", "RUF", "SIM", "UP", "W"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
