[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydvdcss"
version = "1.5.0"
description = "Python wrapper for VideoLAN's libdvdcss."
authors = [{ name = "rlaphoenix", email = "rlaphoenix@pm.me" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
keywords = ["python", "library", "dvd", "videolan", "libdvdcss"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.urls]
Repository = "https://github.com/homemediadb/pydvdcss"
Issues = "https://github.com/homemediadb/pydvdcss/issues"
Forums = "https://github.com/homemediadb/pydvdcss/discussions"
Changelog = "https://github.com/homemediadb/pydvdcss/blob/master/CHANGELOG.md"

[dependency-groups]
lint = ["ruff~=0.15.18", "pre-commit~=4.6.0"]
form = ["ruff~=0.15.18"]
type = ["mypy~=2.1.0"]

[tool.hatch.build.targets.sdist]
include = [
    "pydvdcss",
    "scripts",
    "hatch_build.py",
    "CHANGELOG.md",
    "README.md",
    "THIRD-PARTY-NOTICES.md",
    "LICENSE",
]
# Include a bundled DLL/licence if present when an sdist is built from it (the
# wheel may be built via an intermediate sdist). The pure sdist is built clean.
artifacts = ["pydvdcss/libdvdcss-2.dll", "pydvdcss/LICENSE.libdvdcss"]

[tool.hatch.build.targets.wheel]
# The bundled libdvdcss DLL/licence are downloaded at build time and git-ignored;
# list them as artifacts so they are still included in the (Windows) wheels.
artifacts = ["pydvdcss/libdvdcss-2.dll", "pydvdcss/LICENSE.libdvdcss"]

[tool.hatch.build.targets.wheel.hooks.custom]
# Uses hatch_build.py -> CustomBuildHook to platform-tag wheels that bundle a DLL.

[tool.ruff.lint]
extend-select = ["B", "C4", "E", "FA", "FURB", "I", "ICN", "ISC", "N", "PERF", "PGH", "PIE", "RUF", "SIM", "UP", "W"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
